2008-05-03 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableView.m (-selectRow:byExtendingSelection:,
	-selectColumn:byExtendingSelection:, -rectOfColumn:, -rectOfRow:): Don't
	raise an exception for invalid indexes.

2008-05-01 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableColumn.m (-initWithIdentifier:, -initWithCoder:):
	Check for self becoming nil.
	* Source/NSTableView.m (-columnWithIdentifier:): Allow the column
	identifier to be nil.

2008-04-28 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableHeaderView.m (-mouseDown:): Use new variable
	mouse_sensitivity (value 4) to determine whether the click is on a
	column border. 
	Patch by Andreas Höschler <ahoesch@smartsoft.de>. 
	* Source/NSTableHeaderView.m (-initWithFrame:, -initWithCoder:):
	Check for nil return from super call.

2008-04-27 18:42-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSWindow.m: Change to correct issue with NSWindow placement
	when toolbar is present.

2008-04-25 18:16-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibTemplates.m: Correct [GSNibTemplates deferredWindows] to
	properly return the deferredWindows ivar.

2008-04-08 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSOpenGLView.m (-openGLContext): Fix memory leak
	introduced by last change.

2008-04-08 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBezierPath.m (+drawPackedGlyphs:atPoint:): Use fill
	instead of stroke to draw the glyphs.

2008-04-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSFont.m (NSConvertGlyphsToPackedGlyphs): Store the glyph
	count in th efirst byte.
	* Source/NSBezierPath.m (-appendBezierPathWithPackedGlyphs): Send
	this method on to the graphics context.
	* Headers/AppKit/NSGraphicsContext.h,
	* Source/NSGraphicsContext.m
	(-appendBezierPathWithPackedGlyphs:path:): New method. 

2008-04-04 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSFontInfo.h, 
	* Source/GSFontInfo.m: New method glyphForCharacter:.